ajustes em pedido e atualização de swagger
